<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_content_padding">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/language_name"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/language_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="@dimen/edit_text_default_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/discard_language_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin_corner"
        android:layout_marginLeft="@dimen/fab_margin_corner"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="@dimen/fab_margin_corner"
        android:contentDescription="@string/discard_language"
        android:onClick="onDiscardLanguageFABClick"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_language_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_language_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin_corner"
        android:contentDescription="@string/save_language"
        android:onClick="onSaveLanguageFABClick"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>