<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_content_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/primary_word_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_default_margin"
        android:hint="@string/primary_word"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/primary_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="@dimen/edit_text_default_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_default_margin"
        android:hint="@string/translated_word"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_word_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/translated_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="@dimen/edit_text_default_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_word_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_margin="@dimen/button_default_margin"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onSaveWordButtonClick"
        android:text="@string/save_word"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_default_text_size"
        app:cornerRadius="@dimen/button_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/button_default_stroke_width" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_word_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/button_default_margin"
        android:layout_marginLeft="@dimen/button_default_margin"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onDeleteWordButtonClick"
        android:text="@string/delete_word"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_default_text_size"
        android:visibility="gone"
        app:cornerRadius="@dimen/button_default_radius"
        app:layout_constraintBottom_toBottomOf="@+id/update_word_fab"
        app:layout_constraintEnd_toStartOf="@+id/update_word_fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/update_word_fab"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/button_default_stroke_width" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_word_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin_corner"
        android:contentDescription="@string/update_word"
        android:onClick="onUpdateWordFABClick"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>