<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_content_padding">

    <TextView
        android:id="@+id/word_info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_have_no_words"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/words_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/init_quiz_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/button_default_margin"
        android:layout_marginLeft="@dimen/button_default_margin"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onStartQuizButtonClick"
        android:text="@string/start_quiz"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_default_text_size"
        android:visibility="gone"
        app:cornerRadius="@dimen/button_default_radius"
        app:layout_constraintBottom_toBottomOf="@+id/add_word_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_word_fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_word_fab"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/button_default_stroke_width" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_word_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin_corner"
        android:contentDescription="@string/add_language"
        android:onClick="onAddWordFABClick"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>