<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/message_text_view"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/delete_language"
            android:textAllCaps="true"
            android:textSize="@dimen/dialog_title_default_text_size" />

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cancel_action_button"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/delete_language_info"
            android:textSize="@dimen/dialog_message_default_text_size" />

        <Button
            android:id="@+id/cancel_action_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/button_default_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cancel_action"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_default_text_size"
            app:cornerRadius="@dimen/button_default_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_language_button"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/button_default_stroke_width" />

        <Button
            android:id="@+id/delete_language_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/button_default_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_default_text_size"
            app:cornerRadius="@dimen/button_default_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_action_button"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/button_default_stroke_width" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>